--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
     <div class="Overview">
         <div class="OverviewItem"><span>
                 <p>Trên trang tính “New York City”, trong ô D23, hãy dùng một hàm (function) để hiển thị số lớn nhất từ
-                    cột “Air Miles”.</p>
+                    cột “Air Miles”. Sau đó, hãy làm tương tự để hiển thị số nhỏ nhất trong ô D24 và trung bình trong ô D25.</p>
             </span></div>
     </div>
 </div>
@@ -913,7 +913,7 @@
     <div class="Title"><span>Show Data Table</span></div>
     <div class="Overview">
         <div class="OverviewItem"><span>
-                <p>Trên trang tính “London”, ở biểu đồ “Air Miles”, hiển thị bảng dữ liệu (data table) không có phím chú
+                <p>Trên trang tính “London”, ở biểu đồ “Test Result”, hiển thị bảng dữ liệu (data table) không có phím chú
                     giải (legend keys).</p>
             </span></div>
     </div>
@@ -932,7 +932,7 @@
     <div class="Title"><span>Calculate Monthly Average</span></div>
     <div class="Overview">
         <div class="OverviewItem"><span>
-                <p>Trên trang tính “Key Accounts”, trong cột “Monthly Average”, hãy dùng hàm (function) để tính số dư
+                <p>Trên trang tính “Exam History”, trong cột “Monthly Average”, hãy dùng hàm (function) để tính số dư
                     trung bình hàng tháng cho mỗi tài khoản từ “January” đến hết “April”.</p>
             </span></div>
     </div>
@@ -962,7 +962,7 @@
     <div class="Title"><span>Swap Data Over Axis</span></div>
     <div class="Overview">
         <div class="OverviewItem"><span>
-                <p>Trên trang tính “New Accounts”, ở biểu đồ “Account Balances”, hoán đổi dữ liệu theo trục (swap the
+                <p>Trên trang tính “Subcribe Results”, ở biểu đồ “Registered”, hoán đổi dữ liệu theo trục (swap the
                     data over the axis).</p>
             </span></div>
     </div>
@@ -1140,7 +1140,7 @@
     <div class="Title"><span>Apply Chart Color</span></div>
     <div class="Overview">
         <div class="OverviewItem"><span>
-                <p>Trên trang tính “Summary”, hãy áp dụng màu Colorful Palette 2 cho biểu đồ.</p>
+                <p>Trên trang tính “Score Distribution”, hãy áp dụng màu Colorful Palette 2 cho biểu đồ.</p>
             </span></div>
     </div>
 </div>
