--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
     <div class="Overview">
         <div class="OverviewItem"><span>
                 <p>Trên trang tính “Summary”, trong ô M5, hãy dùng một hàm (function) để hiển thị mức doanh số lớn nhất
-                    từ cột “Total Sales”.</p>
+                    từ cột “Total”.</p>
             </span></div>
     </div>
 </div>
@@ -866,7 +866,7 @@
     <div class="Overview">
         <div class="OverviewItem"><span>
                 <p>Trên trang tính “New Policies”, thay đổi các phần tử (element) được hiển thị trên biểu đồ bằng cách
-                    thay đổi bố cục biểu đồ (chart layout) thành Layout 3.</p>
+                    thay đổi bố cục biểu đồ (chart layout) Q1 Sales thành Layout 3.</p>
             </span></div>
     </div>
 </div>
@@ -1125,7 +1125,7 @@
     <div class="Overview">
         <div class="OverviewItem"><span>
                 <p>Trên trang tính “Products”, trong cột “Projected Value”, hãy nhập công thức để nhân giá trị trong cột
-                    “Current Value” với phạm vi (range) có tên “Increase”. Dùng tên phạm vi này trong công thức thay vì
+                    “Price” với phạm vi (range) có tên “Increase”. Dùng tên phạm vi này trong công thức thay vì
                     tham chiếu ô hoặc giá trị.</p>
             </span></div>
     </div>
